filled rest of groups and added zen mode

--- a/content/projects/tranlingo.mdx
+++ b/content/projects/tranlingo.mdx
@@ -1,5 +1,6 @@
 ---
-title: Tranlingo celebrates and teaches my Asian-American heritage 
+title: Tranlingo is like Duolingo, but it teaches my Asian-American heritage
+date: 2024-04-01
 ---
-
+Tranlingo celebrates and teaches my Asian-American heritage 
 Woah there
