--- a/content/projects/twirp.mdx
+++ b/content/projects/twirp.mdx
@@ -1,5 +1,6 @@
 ---
-title: Twirp is like Twitter, but tweets are only emojis
+title: Twirp is like Twitter, but you can only tweet with emojis
+date: 2024-04-07
 ---
 
 Woah there
