--- a/content/technical/adding-interactivity-with-react.mdx
+++ b/content/technical/adding-interactivity-with-react.mdx
@@ -1,6 +1,7 @@
 ---
 title: Adding Interactivity With React 
 date: 2024-03-12
+series: is like
 ---
 
 
@@ -43,6 +44,7 @@ function Button({ onClick, children }) {
   );
 }
 ```
+
 
 ## 2. State - A Component's Memory
 
