error pages, toast, toc, oh my

--- a/content/technical/building-this-website.mdx
+++ b/content/technical/building-this-website.mdx
@@ -1,6 +1,7 @@
 ---
 title: Responding to Events
 date: 2024-04-15
+pin: true
 ---
 
 export const metadata = {
@@ -8,7 +9,7 @@ export const metadata = {
 }
 
 React lets the developer add *event handlers* to the JSX. Event handlers are custom functions that will be triggered in response to interactions like clicking, hovering, focusing form inputs, and so on.
-
+ 
 ## Adding event handlers
 
 To add an event handler, the developer will first define a function and then pass it as a prop to the appropriate JSX tag. For example, here is a button that does not do anything yet:
