--- a/content/projects/tranlingo.mdx
+++ b/content/projects/tranlingo.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tranlingo is like Duolingo, but it teaches my Asian-American heritage
+title: Tranlingo is like Duolingo, but it teaches my languages
 date: 2024-04-01
 ---
 Tranlingo celebrates and teaches my Asian-American heritage 
