page meta added

--- a/content/interests/interests.mdx
+++ b/content/interests/interests.mdx
@@ -2,20 +2,16 @@
 title: Interests
 ---
 
-Although writing software is always on my mind, I do find myself with enough free time that I can pursue and enjoy other activities. Here are a few of them.
+Writing software is always on my mind, but I do find myself with some free time where I can enjoy and pursue other activities. Here are a few of them.
 
 ## Cooking
 
-I love cooking and I love food. I can toil for hours, even for days, to combine ingredients, flavors, and scents into a singularly holy experience, and my God, it is so beautiful. Maybe the reason is that my main job involves staring at a screen and being in my own head all day, and this is a form of blissful escape. Regardless, it is a joy to make food, and there are few comforts in life better than a hearty meal I made for myself and my loved ones.
+I just love cooking. I can toil for hours, even for days, to combine ingredients, flavors, and scents into a singularly holy experience. Perhaps it is because my main job involves staring at a screen and being in my head all day, and cooking is this beautiful escape from all that. Anyways, there are few comforts in life better than a hearty meal I made for myself and my loved ones.
 
-## Football at Foxborough and at Berkeley
+## Football at Foxborough and Berkeley
 
-My dad grew up a fan of the Patriots, and he must have made a vow the day I was born that he would instill the same fandom in me. I was lucky enough to grow up during the Patriots first three-Super-Bowl run, and so he bought the three documentaries for the three seasons, and he would play them for me over and over again.
+My dad grew up a fan of the Patriots, and he must have made a vow the day I was born that he would mold me into one, too. Anyone who knows a thing or two about the Patriots and the NFL knows that I got to be a very lucky, very happy fan. 
 
-I can vividly recall so many moments from those mini-movies. David Patton acrobatically catching a touchdown in the back of the end zone in the closing minutes of Super Bowl 35. Teddy Bruschi throwing precise, calculated haymakers at the football to cause a fumble. Adam Vinatieri nailing the game-winning field goal in the middle of a New England blizzard.
+When I had two years left at Berkeley, I joined the staff at Cal Football as a student equipment manager. I helped run practices, traveled with the team everywhere, and got paid to take the best seats in the house. 
 
-Anyone who knows a thing or two about the Patriots and the NFL knows that their success didn't end there. I got to be a fortunate Patriots fan all the way up to college, and soon after, when the pandemic started to wind down and I had two years left at Berkeley, I joined the staff at Cal Football as a student equipment manager.
-
-Covid was a struggle and a fog for many of us, and I was no exception. But working at Cal Football and diving into the details of a sport that I grew up with and cherished truly rejuvenated me. I helped run practices, traveled with the team everywhere, and got paid to take the best seats in the house.
-
-And so, today, I still love and follow football. During the season, you can always find me somewhere, either in the living room or at a sports bar, watching a football game.
+So, on football season Sundays , you can almost always find me watching a game.
