--- a/content/projects/tranlingo.mdx
+++ b/content/projects/tranlingo.mdx
@@ -1,6 +1,7 @@
 ---
 title: Tranlingo is like Duolingo, but it teaches my languages
 date: 2024-04-01
+link: https://tranlingo.vercel.app
 ---
 Tranlingo celebrates and teaches my Asian-American heritage 
 Woah there
