feat: added bottom padding to post

--- a/content/faqs/why-do-i-love-computers.mdx
+++ b/content/faqs/why-do-i-love-computers.mdx
@@ -6,7 +6,7 @@ Every other month, my dad would take my brother and I to Fry's, the now-permanen
 
 Those are the earliest of fond memories that I associate with computer technology. Now, my love for creating software has matured. I think it is an exciting field for several reasons.
 
-## We can learn everything about it
+## We can learn anything about it
 
 > "You cannot know everything, but you should convince yourself that you can know anything" - John Carmack
 
